Renaming view layer crash #55160

Closed
opened 2018-05-23 12:55:41 +02:00 by Dalai Felinto · 8 comments

Blender Version
Broken: 37b5c52f11 (HEAD of blender2.8)
Worked: 2.79a

Short description of error
Renaming existing view layer crashes.

Exact steps for others to reproduce the error

  • Rename view layer
**Blender Version** Broken: 37b5c52f11 (HEAD of blender2.8) Worked: 2.79a **Short description of error** Renaming existing view layer crashes. **Exact steps for others to reproduce the error** * Rename view layer
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Brecht Van Lommel was assigned by Dalai Felinto 2018-05-23 12:56:52 +02:00
Author
Owner

Added subscriber: @brecht

Added subscriber: @brecht
Author
Owner

@brecht can you look at it?

@brecht can you look at it?

This issue was referenced by 7c5e174871

This issue was referenced by 7c5e174871e83dfe874da491613a65fbf405099e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Owner

Crash: BLI_assert failed: /home/dfelinto/src/blender/blender/source/blender/depsgraph/intern/depsgraph_query.cc:135, DEG_get_evaluated_view_layer(), at 'view_layer_cow != __null'
Full backtrace: P698

Note: If it doesn't crash right away, click on the viewport.

Crash: `BLI_assert failed: /home/dfelinto/src/blender/blender/source/blender/depsgraph/intern/depsgraph_query.cc:135, DEG_get_evaluated_view_layer(), at 'view_layer_cow != __null'` Full backtrace: [P698](https://archive.blender.org/developer/P698.txt) Note: If it doesn't crash right away, click on the viewport.

Are you saying this happens after the commit still, or was this just coincidental timing?

Are you saying this happens after the commit still, or was this just coincidental timing?
Author
Owner

Bad timing indeed :) Bug is fixed, although your fix introduced a few shadow warnings.

Bad timing indeed :) Bug is fixed, although your fix introduced a few shadow warnings.
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#55160
No description provided.