Fix T55160: crash renaming view layer.